2008-06-24  Mike Krüger <mkrueger@novell.com> 

	* gtk-gui/MonoDevelop.Ide.Gui.Pads.ClassBrowser.ClassBrowserPadWidget.cs:
	  Removed unused labels.

2008-06-23  Michael Hutchinson <mhutchinson@novell.com> 

	* MonoDevelop.Ide.Gui.Content/CompletionTextEditorExtension.cs: Add a
	  protected method for subclasses to show the completion window.

2008-06-23  Andrés G. Aragoneses <aaragoneses@novell.com> 

	Implements feature in bug#323396 (reviewed by Mike Krueger).
	
	* MonoDevelop.Ide.Gui.Dialogs/ReplaceInFilesDialog.cs: Use new search
	  pattern.
	* MonoDevelop.Ide.mdp, Makefile.am: Updated.
	* MonoDevelop.Ide.Gui.Search/FilesDocumentIterator.cs: Abstract class
	  which contains common code for patterns which search in many files
	  (contents copied from WholeProjectDocumentIterator).
	* MonoDevelop.Ide.Gui.Search/WholeProjectDocumentIterator.cs: New
	  iterator for new search pattern.
	* MonoDevelop.Ide.Gui.Search/CurrentProjectDocumentIterator.cs: New
	  file.
	* MonoDevelop.Ide.Gui.Search/WholeCombineDocumentIterator.cs: New file,
	  renamed from WholeProjectDocumentIterator, and moved all common
	  code with new iterator to FilesDocumentIterator.
	* MonoDevelop.Ide.Gui.Search/SearchReplaceManager.cs: New search
	  pattern.
	* MonoDevelop.Ide.Gui.Search/SearchReplaceUtilities.cs: Use the new
	  iterator classes.

2008-06-23  Mike Krüger <mkrueger@novell.com> 

	* MonoDevelop.Ide.Gui.Content/TextEditorProperties.cs: Added tab ==
	  reindent option.

2008-06-20  Michael Hutchinson <mhutchinson@novell.com> 

	* MonoDevelop.Ide.Gui.Dialogs/OverridesImplementsDialog.cs: Use new
	  bulk implementation interfaces to avoid lots of reparses, and to
	  implement interfaces in regions.

2008-06-20  Lluis Sanchez Gual <lluis@novell.com> 

	* MonoDevelop.Ide.Commands/DebugCommands.cs,
	  MonoDevelop.Ide.Debugging/DebuggingService.cs,
	  MonoDevelop.Ide.addin.xml: Implemented detach.

2008-06-20  Levi Bard <taktaktaktaktaktaktaktaktaktak@gmail.com>
